--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,5 @@ fioriHtmlRunner.html
 .*/fioriHtmlRunner.html
 mock_preview_sapui5.html
 .*/mock_preview_sapui5.html
+/webapp/preview_hidden.html
+/dist/
