--- a/.user.project.json
+++ b/.user.project.json
@@ -16,7 +16,7 @@
         "runnerId": "webapprunner",
         "id": 5653610,
         "displayName": "Run index.html",
-        "lastRunTimeStamp": 1476432756015
+        "lastRunTimeStamp": 1477299313764
       }
     },
     {
@@ -38,5 +38,8 @@
         "lastRunTimeStamp": 1476432230746
       }
     }
-  ]
+  ],
+  "hybrid": {
+    "dirty": false
+  }
 }
