--- a/neo-app.json
+++ b/neo-app.json
@@ -1,4 +1,5 @@
 {
+  "authenticationMethod": "none",
   "welcomeFile": "/webapp/index.html",
   "routes": [
     {
@@ -20,5 +21,21 @@
       "description": "SAPUI5 Test Resources"
     }
   ],
-  "sendWelcomeFileRedirect": true
+  "sendWelcomeFileRedirect": true,
+  "cacheControl": [
+    {
+      "directive": "private",
+      "maxAge": 0,
+      "path": "**.html"
+    },
+    {
+      "directive": "private",
+      "maxAge": 0,
+      "path": "sap-ui-cachebuster-info.json"
+    },
+    {
+      "directive": "public",
+      "maxAge": 31536000
+    }
+  ]
 }
