- Optimization of column display in table - QR Code implemented

--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -70,6 +70,9 @@
 				}
 			]
 		},
+		"resourceRoots": {
+			"com.penninkhof.controls": "./controls"
+		},
 		"routing": {
 			"config": {
 				"routerClass": "sap.m.routing.Router",
