Optimizations: - Header with searchfield is always visible now - Show Link (Icon) to Community Tags page beside header title - wrapping text of tag if it doesn't fit in column width - Adjusted the columns width in general - Everything tested on desktop and smartphone

--- a/.project.json
+++ b/.project.json
@@ -6,7 +6,7 @@
   "build": {
     "targetFolder": "dist",
     "sourceFolder": "webapp",
-    "buildRequired": false,
+    "buildRequired": true,
     "lastBuildDateTime": "Sat, 08 Jul 2017 16:18:20 GMT"
   },
   "generation": [
