--- a/.user.project.json
+++ b/.user.project.json
@@ -16,7 +16,7 @@
         "runnerId": "webapprunner",
         "id": 5653610,
         "displayName": "Run index.html",
-        "lastRunTimeStamp": 1499527195235
+        "lastRunTimeStamp": 1499845547753
       }
     },
     {
@@ -40,6 +40,6 @@
     }
   ],
   "hybrid": {
-    "dirty": false
+    "dirty": true
   }
 }
