- Tag information is loaded from sap backend via destination now - added manifest_browser.json for using it as sort of PWA

--- a/neo-app.json
+++ b/neo-app.json
@@ -19,6 +19,14 @@
         "entryPath": "/test-resources"
       },
       "description": "SAPUI5 Test Resources"
+    },
+    {
+      "path": "/destinations/community_tags/",
+      "target": {
+        "type": "destination",
+        "name": "community_tags"
+      },
+      "description": "SAP community tags"
     }
   ],
   "sendWelcomeFileRedirect": true,
