--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -10,6 +10,12 @@
 		},
 		"title": "{{appTitle}}",
 		"description": "{{appDescription}}",
+		"dataSources": {
+			"mainService": {
+				"uri": "/destinations/community_tags/",
+				"type": "JSON"
+			}
+		},
 		"sourceTemplate": {
 			"id": "ui5template.basicSAPUI5ApplicationProject",
 			"version": "1.32.0"
@@ -60,6 +66,12 @@
 				"type": "sap.ui.model.resource.ResourceModel",
 				"settings": {
 					"bundleName": "de.tammenit.sap.community.tags.i18n.i18n"
+				}
+			},
+			"": {
+				"dataSource": "mainService",
+				"settings": {
+					"defaultBindingMode": "OneWay"
 				}
 			}
 		},
